@@ -1,3 +1,8 @@
+2017-02-21 Riccardo Mottola <rm@gnu.org>
+
+	* DBObjectInspector.m
+	Fault panel must be shown in separate thread.
+
 2016-12-15 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
